--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' youtube.com www.youtube.com do-shynet.bombarde32.net; frame-src youtube.com www.youtube.com; media-src 'self' dl.dropboxusercontent.com; connect-src 'self' cdn.plyr.io noembed.com; img-src 'self' i.ytimg.com"
+    Content-Security-Policy = "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' youtube.com www.youtube.com do-shynet.bombarde32.net; frame-src youtube.com www.youtube.com; media-src 'self' dl.dropboxusercontent.com; connect-src 'self' cdn.plyr.io noembed.com do-shynet.bombarde32.net; img-src 'self' i.ytimg.com"
 
 [[plugins]]
     package = "netlify-plugin-11ty"
