--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "md5": "^2.3.0",
     "netlify-plugin-11ty": "^1.1.0",
     "npm-run-all": "^4.1.5",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.6.2",
     "path-browserify": "^1.0.1",
     "prettier": "^2.7.1",
