Fixed testimonials escaping and updated accessibility statement

--- a/src/_data/content/accessibilityStatement.toml
+++ b/src/_data/content/accessibilityStatement.toml
@@ -12,6 +12,10 @@ prevent everyone from accessing and enjoying it.
 
 ## What I do
 
+I aim to be compliant with 
+[Web Content Accessibility Guidelines (WCAG) 2.1](https://www.w3.org/TR/WCAG21/#requirements-for-wcag-2-1)
+Level AA.
+
 I spend a great deal of time thinking through the structure, layout, and
 representation in code of the sites I build. I do my best to educate myself in
 best practices regarding accessible and ethical web design, and spend a lot of
