--- a/src/_data/content/dev.toml
+++ b/src/_data/content/dev.toml
@@ -293,7 +293,7 @@ for more info.
 
 [[ otherprojects.items ]]
 title       = "hymnary-scrape"
-description = "A simple python cli app to download hymn texts from hymnar.org"
+description = "A simple python cli app to download hymn texts from hymnary.org"
 stack       = [ "python" ]
 github      = "https://github.com/bradleyburgess/hymnary-scrape"
 image       = "https://images.unsplash.com/photo-1520446266423-6daca23fe8c7?w=1920"
