--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "watch:parcel": "parcel watch"
   },
   "dependencies": {
+    "firetower-scores": "^0.1.1",
     "photoswipe": "^5.3.2",
     "plyr": "^3.7.2",
     "stripe": "^10.7.0"
