--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "path-browserify": "^1.0.1",
     "prettier": "^2.8.3",
     "rimraf": "^4.1.2",
+    "sharp": "^0.31.3",
     "terser": "^5.16.2",
     "toml": "^3.0.0"
   },
