--- a/package.json
+++ b/package.json
@@ -20,26 +20,17 @@
     "watch:parcel": "parcel watch"
   },
   "dependencies": {
-    "firetower-scores": "^0.1.1",
-    "photoswipe": "^5.3.6",
-    "plyr": "^3.7.7",
-    "stripe": "^11.15.0"
-  },
-  "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
     "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-img": "^3.0.0",
     "@babel/core": "^7.21.0",
     "@parcel/transformer-sass": "^2.6.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "browser-sync": "^2.28.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "eleventy-plugin-broken-links": "^2.0.3",
     "eleventy-plugin-gen-favicons": "^1.1.1",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "firetower-scores": "^0.1.1",
     "html-minifier": "^4.0.0",
     "js-yaml": "^4.1.0",
     "md5": "^2.3.0",
@@ -48,11 +39,20 @@
     "os-browserify": "^0.3.0",
     "parcel": "^2.6.2",
     "path-browserify": "^1.0.1",
-    "prettier": "^2.8.4",
+    "photoswipe": "^5.3.6",
+    "plyr": "^3.7.7",
     "rimraf": "^4.1.2",
     "sharp": "^0.31.3",
+    "stripe": "^11.15.0",
     "terser": "^5.16.6",
     "toml": "^3.0.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.28.3",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.4"
   },
   "browserslist": "defaults",
   "targets": {
