--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "dotenv": "^16.0.1",
     "eleventy-plugin-broken-links": "^2.0.3",
     "eleventy-plugin-gen-favicons": "^1.1.1",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "firetower-scores": "^0.1.1",
     "html-minifier": "^4.0.0",
     "js-yaml": "^4.1.0",
@@ -41,6 +44,7 @@
     "path-browserify": "^1.0.1",
     "photoswipe": "^5.3.6",
     "plyr": "^3.7.7",
+    "prettier": "^2.8.4",
     "rimraf": "^4.1.2",
     "sharp": "^0.31.3",
     "stripe": "^11.15.0",
@@ -48,11 +52,7 @@
     "toml": "^3.0.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.28.3",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.4"
+    "browser-sync": "^2.28.3"
   },
   "browserslist": "defaults",
   "targets": {
