--- a/src/_data/content/home.toml
+++ b/src/_data/content/home.toml
@@ -7,8 +7,8 @@ open-source software. and the ethical web.
 """
 
 [[ links ]]
-text = "Check out my services."
-url  = "/services/"
+text = "Read HNOJ Recital Notes."
+url  = "/blog/hnoj-2023-recital-notes/"
 
 [[ links ]]
 text = "Explore my music."
