--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "firetower-scores": "^0.1.1",
     "photoswipe": "^5.3.6",
     "plyr": "^3.7.7",
-    "stripe": "^11.15.0"
-  },
-  "devDependencies": {
+    "stripe": "^11.15.0",
     "@11ty/eleventy": "^1.0.1",
     "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-img": "^3.0.0",
