--- a/src/_data/content/music/biography.toml
+++ b/src/_data/content/music/biography.toml
@@ -28,8 +28,8 @@ Having served as Director of Music & Organist at St. Mark's Episcopal Church
 (Islip, NY), Minister of Music at Middlebury Congregational Church (Middlebury,
 CT), Organ Scholar at Yale Divinity School's Marquand Chapel, and Associate
 Director of Music and Worship Arts at Edenton Street United Methodist Church
-(Raleigh, NC), Bradley currently serves as Organist & Choirmaster at Church of
-the Nativity in Raleigh, NC. He is also a faculty member of Raleigh School of
-Music and North Carolina Chamber Music Institute, and maintains a studio of
-private students.
+(Raleigh, NC), Bradley currently serves as Lay Associate for Music,
+Communications and Administration at Church of the Nativity in Raleigh, NC. He
+is also a faculty member of North Carolina Chamber Music Institute, and
+maintains a studio of private students.
 """
